--- a/client/public/locales/ru/translation.json
+++ b/client/public/locales/ru/translation.json
@@ -2,7 +2,8 @@
     "header": {
       "schoolBook": "Электронный дневник",
       "login": "Войти",
-      "logout": "Выйти"
+      "logout": "Выйти",
+      "userName": "Гость"
     },
     "footer":  {
 
@@ -11,6 +12,7 @@
         "main": "Главная",
         "diary": "Дневник",
         "schedule": "Расписание",
+        "profile": "Профиль",
         "class": "Наш класс",
         "news": "Новости"
     },
