feat: add grades tables

--- a/client/public/locales/ru/translation.json
+++ b/client/public/locales/ru/translation.json
@@ -11,6 +11,7 @@
     "sidebar": {
         "main": "Главная",
         "diary": "Дневник",
+        "grades": "Успеваемость",
         "schedule": "Расписание",
         "profile": "Профиль",
         "class": "Наш класс",
@@ -46,5 +47,11 @@
         "loginBtn": "Войти",
         "p1": "У вас нет профиля?",
         "p2": "Попросите логин и пароль у классного руководителя"
+    },
+    "grades": {
+        "grades": "Успеваемость",
+        "currentGrades": "Текущие оценки",
+        "finalGrades": "Итоговые  оценки",
+        "rating": "Рейтинг класса"
     }
   }
