--- a/client/public/locales/en/translation.json
+++ b/client/public/locales/en/translation.json
@@ -11,6 +11,7 @@
     "sidebar": {
         "main": "Main",
         "diary": "Diary",
+        "grades": "Grades",
         "schedule": "Schedule",
         "profile": "Profile",
         "class": "Class",
@@ -46,5 +47,11 @@
         "loginBtn": "Login",
         "p1": "Don't have a profile?",
         "p2": "Ask your class teacher for a username and password"
+    },
+    "grades": {
+        "grades": "Academic performance",
+        "currentGrades": "Current grades",
+        "finalGrades": "Final grades",
+        "rating": "Class rating"
     }
   }
