feat: add render class by teacher, add journalPage

--- a/client/public/locales/en/translation.json
+++ b/client/public/locales/en/translation.json
@@ -15,7 +15,8 @@
         "schedule": "Schedule",
         "profile": "Profile",
         "class": "Class",
-        "news": "News"
+        "news": "News",
+        "journal": "Journal"
     },
     "main": {
         "schoolBook": "School Book",
