--- a/client/public/locales/ru/translation.json
+++ b/client/public/locales/ru/translation.json
@@ -15,7 +15,8 @@
         "schedule": "Расписание",
         "profile": "Профиль",
         "class": "Наш класс",
-        "news": "Новости"
+        "news": "Новости",
+        "journal": "Журнал"
     },
     "main": {
         "schoolBook": "Электронный дневник",
