feat: add subscribe btn, styles for settings modal

--- a/client/public/locales/en/translation.json
+++ b/client/public/locales/en/translation.json
@@ -30,7 +30,8 @@
         "newsTitle": "School news"
     },
     "diary": {
-        "diaryTitle": "School diary"
+        "diaryTitle": "School diary",
+        "subscribe": "Subscribe"
     },
     "schedule": {
         "scheduleTitle": "Schedule"
