feat: add hidden arrow, add translate

--- a/client/public/locales/en/translation.json
+++ b/client/public/locales/en/translation.json
@@ -32,7 +32,9 @@
     },
     "diary": {
         "diaryTitle": "School diary",
-        "subscribe": "Subscribe"
+        "subscribe": "Subscribe",
+        "quarter": "quarter",
+        "lastPage": "Last Page"
     },
     "schedule": {
         "scheduleTitle": "Schedule"
