--- a/client/public/locales/ru/translation.json
+++ b/client/public/locales/ru/translation.json
@@ -32,7 +32,9 @@
     },
     "diary": {
         "diaryTitle": "Дневник",
-        "subscribe": "Подписать"
+        "subscribe": "Подписать",
+        "quarter": "четверть",
+        "lastPage": "Последняя страница"
     },
     "schedule": {
         "scheduleTitle": "Расписание"
