--- a/client/public/locales/ru/translation.json
+++ b/client/public/locales/ru/translation.json
@@ -57,5 +57,11 @@
         "currentGrades": "Текущие оценки",
         "finalGrades": "Итоговые  оценки",
         "rating": "Рейтинг класса"
+    },
+    "profile": {
+        "profileTitle": "Профиль пользователя",
+        "teacher": "Учитель",
+        "father": "Отец",
+        "mother": "Мать"
     }
   }
