--- a/client/public/locales/ru/translation.json
+++ b/client/public/locales/ru/translation.json
@@ -28,7 +28,12 @@
         "subtitle": "Теперь дневник нельзя забыть дома!"
     },
     "news": {
-        "newsTitle": "Школьные новости"
+        "newsTitle": "Школьные новости",
+        "addNewsTitle": "Добавить новость",
+        "addTitle": "Заголовок",
+        "content": "Описание новости",
+        "addPicture": "Добавить изображение",
+        "addNewsBtn": "Добавить новость"
     },
     "diary": {
         "diaryTitle": "Дневник",
