--- a/client/public/locales/ru/translation.json
+++ b/client/public/locales/ru/translation.json
@@ -37,7 +37,8 @@
     },
     "diary": {
         "diaryTitle": "Дневник",
-        "subscribe": "Подписать",
+        "signed": "Подписан",
+        "sign": "Подписать",
         "quarter": "четверть",
         "lastPage": "Последняя страница"
     },
