--- a/client/public/locales/ru/translation.json
+++ b/client/public/locales/ru/translation.json
@@ -43,12 +43,17 @@
         "lastPage": "Последняя страница"
     },
     "schedule": {
-        "scheduleTitle": "Расписание"
+        "scheduleTitle": "Расписание",
+        "time": "Время",
+        "lesson": "Урок"
     },
     "class": {
         "classList": "Список класса",
         "classPhotos": "Фото класса",
-        "teacher": "Классный руководитель"
+        "teacher": "Классный руководитель",
+        "name": "ФИО",
+        "birth": "Дата рождения",
+        "address": "Адрес"
     },
     "auth": {
         "authTitle": "Авторизация",
@@ -68,6 +73,18 @@
         "profileTitle": "Профиль пользователя",
         "teacher": "Учитель",
         "father": "Отец",
-        "mother": "Мать"
+        "mother": "Мать",
+        "pupil": "Ученик: ",
+        "class": "Класс: ",
+        "role": "Роль: ",
+        "login": "Логин: ",
+        "teacherIn": "Учитель в "
+    },
+    "journal": {
+        "journalTitle": "Школьный журнал",
+        "quarter": "четверть",
+        "name": "ФИО",
+        "date": "Дата",
+        "task": "Домашнее задание"
     }
   }
