feat: add phone teacher

--- a/client/public/locales/en/translation.json
+++ b/client/public/locales/en/translation.json
@@ -68,6 +68,7 @@
         "profileTitle": "Users profile",
         "teacher": "Teacher",
         "father": "Father",
-        "mother": "Mother"
+        "mother": "Mother",
+        "phone": "Сontact number"
     }
   }
