--- a/client/public/locales/ru/translation.json
+++ b/client/public/locales/ru/translation.json
@@ -68,6 +68,7 @@
         "profileTitle": "Профиль пользователя",
         "teacher": "Учитель",
         "father": "Отец",
-        "mother": "Мать"
+        "mother": "Мать",
+        "phone": "Телефон"
     }
   }
