feat: add schoolPage, add Map

--- a/client/public/locales/ru/translation.json
+++ b/client/public/locales/ru/translation.json
@@ -16,7 +16,8 @@
         "profile": "Профиль",
         "class": "Наш класс",
         "news": "Новости",
-        "journal": "Журнал"
+        "journal": "Журнал",
+        "info": "О школе"
     },
     "main": {
         "schoolBook": "Электронный дневник",
