--- a/client/public/locales/en/translation.json
+++ b/client/public/locales/en/translation.json
@@ -16,7 +16,8 @@
         "profile": "Profile",
         "class": "Class",
         "news": "News",
-        "journal": "Journal"
+        "journal": "Journal",
+        "info": "About school"
     },
     "main": {
         "schoolBook": "School Book",
