feat: add translate info school

--- a/client/public/locales/en/translation.json
+++ b/client/public/locales/en/translation.json
@@ -89,5 +89,10 @@
         "name": "Pupil",
         "date": "Date",
         "task": "Hometask"
+    },
+    "info": {
+        "about": "About school",
+        "adress": "Adress",
+        "phone": "Phone"
     }
   }
