--- a/client/public/locales/ru/translation.json
+++ b/client/public/locales/ru/translation.json
@@ -88,5 +88,10 @@
         "name": "ФИО",
         "date": "Дата",
         "task": "Домашнее задание"
+    },
+    "info": {
+        "about": "О школе",
+        "adress": "Адрес",
+        "phone": "Телефон"
     }
   }
