feat: add translate for pupil cards static info

--- a/client/public/locales/en/translation.json
+++ b/client/public/locales/en/translation.json
@@ -69,13 +69,16 @@
         "grades": "Academic performance",
         "currentGrades": "Current grades",
         "finalGrades": "Final grades",
-        "rating": "Class rating"
+        "rating": "Class rating",
+        "subject": "Subject",
+        "average": "GPA"
     },
     "profile": {
         "profileTitle": "Users profile",
         "teacher": "Teacher",
         "father": "Father",
         "mother": "Mother",
+        "parents": "Parents",
         "phone": "Сontact number",
         "pupil": "Pupil: ",
         "class": "Class: ",
