--- a/client/public/locales/ru/translation.json
+++ b/client/public/locales/ru/translation.json
@@ -41,7 +41,9 @@
         "signed": "Подписан",
         "sign": "Подписать",
         "quarter": "четверть",
-        "lastPage": "Последняя страница"
+        "lastPage": "Последняя страница",
+        "task": "Домашнее задание",
+        "mark": "Отметка"
     },
     "schedule": {
         "scheduleTitle": "Расписание",
@@ -90,7 +92,9 @@
         "quarter": "четверть",
         "name": "ФИО",
         "date": "Дата",
-        "task": "Домашнее задание"
+        "task": "Домашнее задание",
+        "hideHomework": "Скрыть домашние задания",
+        "showHomework": "Показать домашние задания"
     },
     "info": {
         "about": "О школе",
